<resources>
    <string name="app_name">Hababak-Restaurant</string>
    <string name="item_edit">Edit</string>
    <string name="empty_order_active">No active orders found at the moment</string>
    <string name="empty_order_delivery">No orders out for delivery at the moment</string>
    <string name="empty_order_complete">No orders completed at the moment</string>
    <string name="loading">…</string>
    <string-array name="item_veg_non">
        <item>Veg Food</item>
        <item>Non-Veg Food</item>
    </string-array>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="sign_up_now">Sign up Now</string>
    <string name="register_now">register now</string>
    <string name="sign_in_now">sign in now</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="new_password">New Password</string>
    <string name="email_address">Email Address</string>
    <string name="delivery">Delivery</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="orders">Orders</string>
    <string name="items">Items</string>
    <string name="account">Account</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_the_verification_code">Please type the Verification Code</string>
    <string name="enter_otp_here">enter otp here</string>
    <string name="verify_now">Verify now</string>
</resources>