<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp32">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etPassword1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPassword2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:hint="@string/confirm"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp32"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/countryCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:visibility="gone" />

        <include layout="@layout/progress_bar_horizontal" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:background="@drawable/button_background_red"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered"
                android:textColor="@color/Gray" />

            <TextView
                android:id="@+id/register_signin_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp4"
                android:text="@string/sign_in_now"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>