<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp32">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:fontFamily="@font/roboto"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/signin_password_visible_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:padding="@dimen/dp4"
                android:src="@drawable/ic_hide" />
        </FrameLayout>

        <TextView
            android:id="@+id/signin_forgot_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/dp32"
            android:padding="@dimen/dp4"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <include layout="@layout/progress_bar_horizontal" />

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:background="@drawable/button_background_red"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_registered_yet"
                android:textColor="@color/Gray"
                android:textSize="@dimen/textSize12sp" />

            <TextView
                android:id="@+id/signin_signup_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp4"
                android:text="@string/sign_up_now"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textSize12sp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>